Fixed sidebar alignment and positioning

--- a/src/app/core/sidebar/sidebar.component.scss
+++ b/src/app/core/sidebar/sidebar.component.scss
@@ -3,12 +3,11 @@
 #sidebar-container {
   .sidebar-ul {
     list-style: none;
-    padding-left: 2.5rem;
+    margin: 0;
 
     li {
       margin-top: 4rem;
-      margin-left: 2.5rem;
-      width: 15rem;
+      width: 50%;
 
       .section-header {
         color: white;
